# FaceyThing

./: CMakeLists.txt  readme.txt
assets/: bleed_shader.frag  empty.vert  paint_mesh.frag  paint_mesh.vert  settings.json
include/: CameraCapture.h  CollageItem.h  FaceCollage.h  FaceMesh.h  FacePainter.h  FaceRenderer.h  FaceTracker.h  FaceyThing.h  FacialComponents.h  LandmarkDetector.h  ObjectTracker.h
src/: CameraCapture.cpp  CameraCapture.h  CinderDlib.cpp  CinderDlib.h  CollageItem.cpp  CollageItem.h  EyePopper.cpp  EyePopper.h  FaceCollage.cpp  FaceCollage.h  FaceDetector.cpp  FaceDetector.h  FaceDistortionMesh.cpp  FaceMesh.cpp  FaceMesh.h  FacePainter.cpp  FacePainter.h  FaceRenderer.cpp  FaceTracker.cpp  FaceTracker.h  FaceyThing.cpp  FaceyThing.h  FaceyThingApp.cpp  FacialComponents.cpp  FacialComponents.h  FrameSubtractor.cpp  FrameSubtractor.h  LandmarkDetector.cpp  LandmarkDetector.h  OMeshVBO.cpp  OMeshVBO.h  ObjectTracker.cpp  ObjectTracker.h
